--- a/delivery-service.yml
+++ b/delivery-service.yml
@@ -25,5 +25,5 @@ spring:
         database-platform: org.hibernate.dialect.PostgreSQL9Dialect
         generate-ddl: false
         hibernate:
-            ddl-auto: update
+            ddl-auto: create
         show-sql: true
