--- a/arquitetura-gateway-server.yml
+++ b/arquitetura-gateway-server.yml
@@ -1,5 +1,18 @@
 server:
   port: 9092
+  
+  
+ eureka:
+  instance:
+    hostname: localhost
+    port: 9091
+  client:
+    registerWithEureka: true
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://localhost:9091/eureka/
+  server:
+    wait-time-in-ms-when-sync-empty: 3000
 
 spring:
   cloud:
