--- a/arquitetura-gateway-server.yml
+++ b/arquitetura-gateway-server.yml
@@ -17,9 +17,9 @@ spring:
   cloud:
     gateway:
       routes:
-        id: delivery-service
+        id: api-delivery-service
         uri: http://localhost:9093/
         predicates: Path=/api/orders/**
-        id: provider-service
+        id: api-provider-service
         uri: http://localhost:9094/
         predicates: Path=/api/providers/**
