--- a/arquitetura-gateway-server.yml
+++ b/arquitetura-gateway-server.yml
@@ -24,4 +24,4 @@ spring:
       - id: provider-service
         uri: http://localhost:9094/
         predicates:
-        - Path=/api/orders/**
+        - Path=/api/providers**
