--- a/arquitetura-gateway-server.yml
+++ b/arquitetura-gateway-server.yml
@@ -14,8 +14,20 @@ eureka:
     wait-time-in-ms-when-sync-empty: 3000
 
 spring:
-    cloud:
-        gateway:
-            discovery:
-                locator:
-                    enabled: true
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true  
+      routes:
+      - id: delivery-service
+        uri: lb://delivery-service
+        predicates:
+        - Path=/api/orders/**
+        
+      - id: provider-service
+        uri: lb://provider-service
+        predicates:
+        - Path=/api/providers**
+        
+        
