--- a/arquitetura-gateway-server.yml
+++ b/arquitetura-gateway-server.yml
@@ -18,6 +18,7 @@ spring:
     gateway:
       discovery:
         locator:
-          enabled: true  
+          enabled: true
+          lower-case-service-id: true
  
         
