--- a/delivery-service.yml
+++ b/delivery-service.yml
@@ -14,6 +14,8 @@ eureka:
     wait-time-in-ms-when-sync-empty: 3000
 
 spring:
+  application:
+    name: delivery-service
     datasource:
         driver-class-name: org.postgresql.Driver
         username: postgres
