--- a/arquitetura-gateway-server.yml
+++ b/arquitetura-gateway-server.yml
@@ -13,4 +13,12 @@ eureka:
   server:
     wait-time-in-ms-when-sync-empty: 3000
 
+spring:
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
+ 
         
