--- a/delivery-service.yml
+++ b/delivery-service.yml
@@ -7,7 +7,7 @@ eureka:
     port: 9091
   client:
     registerWithEureka: true
-    fetchRegistry: true
+    fetchRegistry: false
     serviceUrl:
       defaultZone: http://localhost:9091/eureka/
   server:
