--- a/delivery-service.yml
+++ b/delivery-service.yml
@@ -27,3 +27,10 @@ spring:
         hibernate:
             ddl-auto: update
         show-sql: true
+        
+   cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+          lower-case-service-id: true
