--- a/delivery-service.yml
+++ b/delivery-service.yml
@@ -27,8 +27,8 @@ spring:
         hibernate:
             ddl-auto: update
         show-sql: true
-        
-   cloud:
+spring:
+  cloud:
     gateway:
       discovery:
         locator:
