--- a/arquitetura-gateway-server.yml
+++ b/arquitetura-gateway-server.yml
@@ -12,13 +12,20 @@ eureka:
       defaultZone: http://localhost:9091/eureka/
   server:
     wait-time-in-ms-when-sync-empty: 3000
-
+   
 spring:
   cloud:
-    gateway:
+    gateway:   
       discovery:
         locator:
           enabled: true
           lower-case-service-id: true
- 
-        
+      routes:
+      - id: delivery-service
+        uri: http://localhost:9093/
+        predicates:
+        - Path=/api/orders/**
+      - id: provider-service
+        uri: http://localhost:9094/
+        predicates:
+        - Path=/api/providers/**
