--- a/arquitetura-gateway-server.yml
+++ b/arquitetura-gateway-server.yml
@@ -22,7 +22,7 @@ spring:
           lower-case-service-id: true
       routes:
       - id: delivery-service
-        uri: lb://delivery-service/
+        uri: http://localhost:9093/
         predicates:
         - Path=/api/orders/**
       - id: provider-service
