--- a/delivery-service.yml
+++ b/delivery-service.yml
@@ -10,6 +10,8 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:9091/eureka/
+   instance:
+    prefer-ip-address: true
   server:
     wait-time-in-ms-when-sync-empty: 3000
 
