--- a/arquitetura-gateway-server.yml
+++ b/arquitetura-gateway-server.yml
@@ -1,5 +1,13 @@
 server:
   port: 9092
+  
+endpoints:
+  restart:
+    enabled: true
+  shutdown:
+    enabled: true
+  health:
+    sensitive: true
 
 eureka:
   instance:
